Galeria - Work in progress

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <li><a href="nosotros.html">Nosotros</a></li>
                                 <li><a href="services.html">Servicios</a></li>
                                 <li><a href="team.html">Equipo</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
+                                <li><a href="gallery.html">Galeria</a></li>
                                 <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="blog.html">Blog</a></li>
                                 <li><a href="contact.html">Contact</a>
