Nuevas fotos, planes y precios

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="css/flaticons/flaticon.css" type="text/css" media="all" />
     <link rel="stylesheet" href="js/prettyphoto/css/prettyPhoto.css" type="text/css" media="all" />
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 </head>
 
 <body data-offset="100" data-spy="scroll" data-target=".my-nav">
@@ -68,7 +70,7 @@
                                 <li><a href="services.html">Servicios</a></li>
                                 <li><a href="team.html">Equipo</a></li>
                                 <li><a href="gallery.html">Galeria</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
+                                <li><a href="pricing.html">Asociate</a></li>
                                 <li><a href="blog.html">Blog</a></li>
                                 <li><a href="contact.html">Contact</a>
                                     <!-- <ul class="sub-menu">
