--- a/services.html
+++ b/services.html
@@ -10,21 +10,22 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
 
-    <title>Services | Pet Clinic</title>
+    <title>Veterinaria Madasgcar</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700%7CDroid+Serif:400,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link 
+        href='https://fonts.googleapis.com/css?family=Ubuntu:300,400,700%7CDroid+Serif:400,400italic,700,700italic'
+        rel='stylesheet' 
+        type='text/css'>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="images/favicon.ico">
-
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/flaticons/flaticon.css" type="text/css" media="all" />
     <link rel="stylesheet" href="js/prettyphoto/css/prettyPhoto.css" type="text/css" media="all" />
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
@@ -94,8 +95,8 @@
                         <i class="picons flaticon-pets3"></i>
                         <h5>CLINICA MEDICA</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula ante porta felis euismod semper. Integer posuere
-                            erat a ante venenatis dapibus posuere velit.
+                            Atención clinica general, plan sanitario desde los primeros dias de vida, recomendaciones y
+                            seguimiento del paciente hasta gerontes.
                         </p>
                     </div>
                 </div>
@@ -107,8 +108,8 @@
                         <i class="picons flaticon-syringe18"></i>
                         <h5>DERMATOLOGIA</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula porta felis euismod semper. Integer posuere erat a
-                            ante venenatis dapibus posuere velit aliquet.
+                            Consulta de especialista, duración aproximada 1.30 hs , incluye la toma de muestras de piel
+                            del paciente para su posterior análisis y luego informe.
                         </p>
                     </div>
                 </div>
@@ -120,8 +121,9 @@
                         <i class="picons flaticon-cat44"></i>
                         <h5>ETOLOGIA</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula porta felis euismod semper. Integer posuere erat a
-                            ante venenatis dapibus posuere velit aliquet.
+                            Consulta de especialista, duración aproximada 1.30 hs, evaluación comportamental del
+                            paciente, diagnostico y seguimiento, posibilidad de hacerlo online y presencial o a
+                            domicilio.
                         </p>
                     </div>
                 </div>
@@ -135,8 +137,8 @@
                         <i class="picons flaticon-comb12"></i>
                         <h5>CIRUGIA</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula ante porta felis euismod semper. Integer posuere
-                            erat a ante venenatis dapibus posuere velit.
+                            Realizamos cirugias programadas, traumatologicas, oftalmologicas,castraciones, y de
+                            urgencia(coordinadas con evaluacion previa del paciente.
                         </p>
                     </div>
                 </div>
@@ -148,8 +150,9 @@
                         <i class="picons flaticon-love42"></i>
                         <h5>SERVICIO DE ANESTESIOLOGIA</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula porta felis euismod semper. Integer posuere erat a
-                            ante venenatis dapibus posuere velit aliquet.
+                            Servicio de anestesia a cargo del MV. Agustin Casablanca, te ofrecemos asesoramiento previo
+                            a cada cirugia o procedimiento a realizar. Contamos con el equipo para realizar anestesia
+                            inhalatoria.
                         </p>
                     </div>
                 </div>
@@ -161,8 +164,8 @@
                         <i class="picons flaticon-dog33"></i>
                         <h5>SERVICIO DE ATENCION A DOMICILIO</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula porta felis euismod semper. Integer posuere erat a
-                            ante venenatis dapibus posuere velit aliquet.
+                            Contamos con el servicio de atencion a domicilio, vacunacion y primera atencion en
+                            urgencias.
                         </p>
                     </div>
                 </div>
@@ -176,8 +179,8 @@
                         <i class="picons flaticon-comb12"></i>
                         <h5>LABORATORIO</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula ante porta felis euismod semper. Integer posuere
-                            erat a ante venenatis dapibus posuere velit.
+                            Realizamos extracciones y analisis de laboratorio varios.
+                            Contamos con el servicio de ecografia , con turno previo
                         </p>
                     </div>
                 </div>
@@ -189,8 +192,7 @@
                         <i class="picons flaticon-love42"></i>
                         <h5>PELUQUERIA</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula porta felis euismod semper. Integer posuere erat a
-                            ante venenatis dapibus posuere velit aliquet.
+                            Servicio de bano y corte a todas las razas, consultar por turnos previos.
                         </p>
                     </div>
                 </div>
@@ -202,8 +204,8 @@
                         <i class="picons flaticon-dog33"></i>
                         <h5>PET SHOP</h5>
                         <p class="service-desc">
-                            Vestibulum id ligula porta felis euismod semper. Integer posuere erat a
-                            ante venenatis dapibus posuere velit aliquet.
+                            Contamos con variedad de productos para perros, gatos, acuario, productos para roedores y
+                            aves. Podes conseguirlos tambien por nuestra tienda online.
                         </p>
                     </div>
                 </div>
@@ -241,24 +243,18 @@
     <footer>
         <ul class="get-social alignc">
             <li>
-                <a 
-                    class="social-facebook" 
-                    href="https://www.facebook.com/veterinariamadagascar80/" 
-                    target="_blank">
+                <a class="social-facebook" href="https://www.facebook.com/veterinariamadagascar80/" target="_blank">
                     <i class="fa fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a 
-                    class="social-instagram" 
-                    href="https://www.instagram.com/veterinariamadagascar/?hl=es-la" 
+                <a class="social-instagram" href="https://www.instagram.com/veterinariamadagascar/?hl=es-la"
                     target="_blank">
                     <i class="fa fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a 
-                    class="social-whatsapp" 
+                <a class="social-whatsapp"
                     href="https://api.whatsapp.com/send?phone=2215777308&text=Hola,%20queria%20contactarme%20con%20ustedes.%20Tengo%20una%20consulta."
                     target="_blank">
                     <i class="fa fa-whatsapp"></i>
