--- a/team-member-1-modal.html
+++ b/team-member-1-modal.html
@@ -9,7 +9,8 @@
                 <div class="profile-icon">
                     <img class="img-responsive vet-team-member" src="images/photos/nosotros/jesi.jpg" alt="">
                     <ul class="profile-social alignc">
-                        <li><a href="https://www.instagram.com/jesisingermann/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/jesisingermann/" target="_blank"><i
+                                    class="fa fa-instagram"></i></a></li>
                         <li><a href="mailto: jsingermann@hotmail.com"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
@@ -23,9 +24,28 @@
                         <div class="col-lg-12">
                             <h4 class="small-sub-title">- Bio -</h4>
                             <ul>
-                                <li>Posgrado en Etología Clínica⁣ CEMV⁣</li>
-                                <li>Ex docente en la Cátedra de Semiología y Clínica de pequeños animales de la FCV UNLP⁣</li>
-                                <li>Especialización en Psiquiatría y Master en Neurociencias de la Universidad Maimónides/li>
+                                <li>
+                                    Julio 2020 desarrollo clínica general y consultorio de especialidad
+                                    ( etologia clínica desde 2011 )
+                                </li>
+                                <li>
+                                    UNLP clínica de pequeños , Ayudante diplomada
+                                    2013-2016 La Plata: Hospital escuela : clínica general , docente , y
+                                    consultorio de Etologia
+                                </li>
+                                <li>
+                                    UNLP, cátedra Semiologia y propedéutica , ayudante alumna y
+                                    diplomada
+                                    2006-2013 La Plata Docencia
+                                </li>
+                                <li>
+                                    UNLP, Médica veterinaria<br/>
+                                    Agosto 2008 La Plata<br/>
+                                    Diplomado Etologia Clínica , Cemv<br/>
+                                    Capital federal , Marzo 2013<br/>
+                                    Maestría neurociencias , universidad Maimonides<br/>
+                                    Capital federal , Marzo 2019<br/>
+                                </li>
                             </ul>
                         </div>
                     </div>
