--- a/nosotros.html
+++ b/nosotros.html
@@ -9,19 +9,23 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Nosotros | Veterinaria Madagascar</title>
+
+    <title>Veterinaria Madasgcar</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700%7CDroid+Serif:400,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link 
+        href='https://fonts.googleapis.com/css?family=Ubuntu:300,400,700%7CDroid+Serif:400,400italic,700,700italic'
+        rel='stylesheet' 
+        type='text/css'>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/flaticons/flaticon.css" type="text/css" media="all" />
     <link rel="stylesheet" href="js/prettyphoto/css/prettyPhoto.css" type="text/css" media="all" />
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
